# vertex-ai-huggingface-inference-toolkit

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  TODOS.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci-cd.yaml  workflow.yaml  workflow.yml
docs/: index.md  license.md
license/: index.html
search/: search_index.json
src/vertex_ai_huggingface_inference_toolkit/: __init__.py  diffusers.py  diffusers_utils.py  docker.py  huggingface.py  logging.py  model.py  transformers.py  transformers_utils.py  utils.py
src/vertex_ai_huggingface_inference_toolkit/_internal/diffusers/dockerfiles/: Dockerfile.cpu  Dockerfile.gpu
src/vertex_ai_huggingface_inference_toolkit/_internal/dockerfiles/: Dockerfile.cpu  Dockerfile.gpu
src/vertex_ai_huggingface_inference_toolkit/_internal/transformers/dockerfiles/: Dockerfile.cpu  Dockerfile.gpu
src/vertex_ai_huggingface_inference_toolkit/_internal/transformers/schemas/text-generation/: input.yaml  output.yaml
src/vertex_ai_huggingface_inference_toolkit/_internal/transformers/schemas/zero-shot-classification/: input.yaml  output.yaml
src/vertex_ai_huggingface_inference_toolkit/dockerfiles/: Dockerfile.cpu  Dockerfile.gpu
src/vertex_ai_huggingface_inference_toolkit/google_cloud/: artifact_registry.py  storage.py
src/vertex_ai_huggingface_inference_toolkit/handler/: custom_handler.py
src/vertex_ai_huggingface_inference_toolkit/images/: Dockerfile.cpu  Dockerfile.gpu
src/vertex_ai_huggingface_inference_toolkit/predictors/: diffusers.py  transformers.py
src/vertex_ai_huggingface_inference_toolkit/server/: custom_serving.py
src/vertex_ai_huggingface_inference_toolkit/utils/: __init__.py  cache.py  device.py  docker.py  huggingface.py
src/vertex_ai_huggingface_inference_toolkit/utils/gcloud/: __init__.py  artifact_registry.py  storage.py
